--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Anastasiia Khrypko</a>.
+    Coded by <a href="https://github.com/iamstasiia">Anastasiia Khrypko</a>.
   </div>
 </body>
 </html>
